--- a/templates/authentication/password.html
+++ b/templates/authentication/password.html
@@ -34,7 +34,7 @@
                             {% if current_user.password_hash %}
                                 <div>
                                     {{ form.current_password.label }}
-                                    {{ form.current_password(placeholder="Your current password")}}
+                                    {{ form.current_password(placeholder="Your current password") }}
                                 </div>
                             {% endif %}
                             <div>
@@ -47,13 +47,21 @@
                             </div>
                             <div>
                                 {{ form.captcha(placeholder="Enter captcha") }}
-                                <img class="captcha-image" src="{{url_for('auth.captcha')}}" width="120" height="30">
-                                <a class="captcha-reload btn col-sm-1"><img src="{{url_for('static', filename='img/refresh.png')}}" width="16" height="16"></a>
+                                <img class="captcha-image"
+                                     src="{{ url_for('auth.captcha') }}"
+                                     width="120"
+                                     height="30">
+                                <a class="captcha-reload btn col-sm-1">
+                                    <img src="{{ url_for('static', filename='img/refresh.png') }}"
+                                         width="16"
+                                         height="16">
+                                </a>
                             </div>
                             {{ form.submit }}
                         </form>
                     </div>
-                    <fieldset style="padding-bottom: 173px" class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
+                    <fieldset style="padding-bottom: 173px"
+                              class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
                         <h6>
                             ACCOUNT RELATED PAGES
                         </h3>
@@ -121,6 +129,4 @@
         </div>
     </div>
 {% endblock %}
-{% block scripts %}
-    <script src="{{url_for('static', filename='js/captcha-reload.js')}}"></script>
-{% endblock %}
+{% block scripts %}<script src="{{url_for('static', filename='js/captcha-reload.js') }}"></script>{% endblock %}
