--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -1,3 +1,4 @@
+<!-- templates/authentication/signup.html -->
 {% extends "base.html" %}
 {% block title %}Pybin.com - Sign Up Page{% endblock %}
 {% block content %}
@@ -13,9 +14,7 @@
                     <h4 class="title">Sign Up Page</h4>
                     <hr>
                 </div>
-                <div class="content_text h4">
-                    Join the Pybin community with over 2 members!
-                </div>
+                <div class="content_text h4">Join the Pybin community with over 2 members!</div>
                 <div class="social_auth py-2">
                     <a class="btn btn-outline-danger" href="/site/auth-google/">Sign in with Google</a>
                     <hr>
@@ -23,45 +22,50 @@
                 <div class="form d-flex">
                     <div class="form_frame col-sm-6">
                         <form method="POST" action="/signup/">
-                            {{form.csrf_token}}
+                            {{ form.csrf_token }}
                             <div class="mb-3 row">
-                                <label class="col-sm-2 col-form-label">{{form.username.label}}</label>
-                                <p class="col-sm-10">{{form.username(placeholder="Your username")}}</p>
+                                <label class="col-sm-2 col-form-label">{{ form.username.label }}</label>
+                                <p class="col-sm-10">{{ form.username(placeholder="Your username") }}</p>
                                 <ul class="errors">
                                     {% for error in form.username.errors %}<li style="color:red;">{{ error }}</li>{% endfor %}
                                 </ul>
                             </div>
                             <div class="mb-3 row">
-                                <label class="col-sm-2 col-form-label">{{form.email.label}}</label>
-                                <p class="col-sm-10">{{form.email(placeholder="Your email address")}}</p>
+                                <label class="col-sm-2 col-form-label">{{ form.email.label }}</label>
+                                <p class="col-sm-10">{{ form.email(placeholder="Your email address") }}</p>
                                 <ul class="errors">
                                     {% for error in form.email.errors %}<li style="color:red;">{{ error }}</li>{% endfor %}
                                 </ul>
                             </div>
                             <div class="mb-3 row">
-                                <label class="col-sm-2 col-form-label">{{form.password.label}}</label>
-                                <p class="col-sm-8">{{form.password(placeholder="Your password")}}</p>
+                                <label class="col-sm-2 col-form-label">{{ form.password.label }}</label>
+                                <p class="col-sm-8">{{ form.password(placeholder="Your password") }}</p>
                                 <ul class="errors">
                                     {% for error in form.password.errors %}<li style="color:red;">{{ error }}</li>{% endfor %}
                                 </ul>
                             </div>
                             <div class="mb-3 row">
                                 <label class="col-sm-2 col-form-label"></label>
-                                <p class="input-sm col-sm-3">{{form.captcha(placeholder="Enter captcha")}}</p>
-                                <img class="captcha-image col-sm-3" src="{{url_for('auth.captcha')}}" width="120" height="30">
-                                <a class="captcha-reload btn col-sm-1"><img src="{{url_for('static', filename='img/refresh.png')}}" width="16" height="16"></a>
+                                <p class="input-sm col-sm-3">{{ form.captcha(placeholder="Enter captcha") }}</p>
+                                <img class="captcha-image col-sm-3"
+                                     src="{{ url_for('auth.captcha') }}"
+                                     width="120"
+                                     height="30">
+                                <a class="captcha-reload btn col-sm-1">
+                                    <img src="{{ url_for('static', filename='img/refresh.png') }}"
+                                         width="16"
+                                         height="16">
+                                </a>
                             </div>
                             <div class="mb-3 row">
                                 <label class="col-sm-2 col-form-label"></label>
-                                <p class="col-sm-8">{{form.submit}}</p>
+                                <p class="col-sm-8">{{ form.submit }}</p>
                             </div>
-                            
                         </form>
                     </div>
-                    <fieldset style="height: 200px"class="related_pages border rounded border-dark px-2 col-sm-2.5">
-                        <h6>
-                            RELATED PAGES
-                        </h6>
+                    <fieldset style="height: 200px"
+                              class="related_pages border rounded border-dark px-2 col-sm-2.5">
+                        <h6>RELATED PAGES</h6>
                         <a class="btn btn-outline-dark" href="/signup/">Create New Account?</a>
                         <br>
                         <!--TODO: Make a username reminder through email (change url)-->
@@ -132,6 +136,4 @@
         </div>
     </div>
 {% endblock %}
-{% block scripts %}
-    <script src="{{url_for('static', filename='js/captcha-reload.js')}}"></script>
-{% endblock %}
+{% block scripts %}<script src="{{url_for('static', filename='js/captcha-reload.js') }}"></script>{% endblock %}
