--- a/templates/pybin/avatar.html
+++ b/templates/pybin/avatar.html
@@ -1,3 +1,4 @@
+<!-- templates/pybin/avatar.html -->
 {% extends "base.html" %}
 {% block title %}Pybin.com - Change Your Avatar{% endblock %}
 {% block content %}
@@ -18,7 +19,7 @@
                 </div>
                 <div class="info">
                     <i class="fa fa-info-circle" aria-hidden="true"></i>
-                    To update your avatar, select a valid JPG or PNG image. We will automatically resize the image for you. 
+                    To update your avatar, select a valid JPG or PNG image. We will automatically resize the image for you.
                 </div>
                 <div class="user_page d-flex">
                     <div class="form_frame_left col-sm-6">
@@ -33,7 +34,8 @@
                             {{ form.submit }}
                         </form>
                     </div>
-                    <fieldset style="padding-bottom: 173px"class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
+                    <fieldset style="padding-bottom: 173px"
+                              class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
                         <h6>
                             ACCOUNT RELATED PAGES
                         </h3>
