--- a/templates/pybin/clone_document.html
+++ b/templates/pybin/clone_document.html
@@ -1,3 +1,4 @@
+<!-- templates/pybin/clone_document.html -->
 {% extends "base.html" %}
 {% block title %}Create a new version of paste: - Pybin.com{% endblock %}
 {% block content %}
@@ -40,7 +41,7 @@
                             </div>
                             <div>
                                 {{ form.tags.label }}
-                                {{ form.tags(placeholder="software, tutorial, data")}}
+                                {{ form.tags(placeholder="software, tutorial, data") }}
                             </div>
                             <div>
                                 {{ form.syntax.label }}
