--- a/templates/pybin/error.html
+++ b/templates/pybin/error.html
@@ -1,3 +1,4 @@
+<!-- templates/pybin/error.html -->
 {% extends "base.html" %}
 {% block title %}Pybin.com - Error {{ error_code }}{% endblock %}
 {% block content %}
@@ -14,9 +15,8 @@
                 {% elif error_code == "403" %}
                     Error, this is a private paste or is pending moderation. If this paste belongs to you, please login to Pybin to view it.
                 {% elif error_code == "400" %}
-                    Wrong verify email token. 
+                    Wrong verify email token.
                 {% endif %}
-
             </div>
             <div class="sidebar col-sm-3">
                 {% if current_user.is_authenticated %}
