--- a/templates/pybin/my_messages.html
+++ b/templates/pybin/my_messages.html
@@ -1,3 +1,4 @@
+<!-- templates/pybin/my_messages.html -->
 {% extends "base.html" %}
 {% block title %}Pybin.com - My Private Messages{% endblock %}
 {% block content %}
