--- a/templates/pybin/edit_comment.html
+++ b/templates/pybin/edit_comment.html
@@ -1,3 +1,4 @@
+<!-- templates/pybin/edit_comment.html -->
 {% extends "base.html" %}
 {% block title %}Edit comment: {{ document.content[:50] }} - Pybin.com{% endblock %}
 {% block content %}
