--- a/templates/pybin/my_pybin.html
+++ b/templates/pybin/my_pybin.html
@@ -1,3 +1,4 @@
+<!-- templates/pybin/my_pybin.html -->
 {% extends "base.html" %}
 {% block title %}{{ user.username|capitalize }}'s Comments - Pybin.com{% endblock %}
 {% block content %}
@@ -12,7 +13,7 @@
                 <div class="user-view">
                     <div class="details d-flex">
                         <div class="user-icon d-inline-flex">
-                            <img src="{{ profile_image(user)}}" width="40" height="40">
+                            <img src="{{ profile_image(user) }}" width="40" height="40">
                         </div>
                         <div class="info-bar">
                             <div class="info-top">
@@ -22,7 +23,7 @@
                             </div>
                             <div class="info-bottom align-items-end d-flex">
                                 <span class="rating px-1"
-                                      title="Accumulative total rating of all this users pastes."><i class="fa fa-star" aria-hidden="true"></i> {{ user.get_total_rating()}}</span>
+                                      title="Accumulative total rating of all this users pastes."><i class="fa fa-star" aria-hidden="true"></i> {{ user.get_total_rating() }}</span>
                                 <span class="date px-1" title="When this user joined Pybin"><i class="fa fa-calendar" aria-hidden="true"></i> {{ user.created|timesince }}</span>
                             </div>
                         </div>
@@ -50,7 +51,7 @@
                                         {% endif %}
                                         <a href="/{{ paste.uuid_hash }}">{{ paste.title }}</a>
                                     </td>
-                                    <td>{{ paste.created.strftime("%b %d, %Y")}}</td>
+                                    <td>{{ paste.created.strftime("%b %d, %Y") }}</td>
                                     {% if paste.expiration == 0 %}
                                         <td>Never</td>
                                     {% elif paste.expiration == 3600 %}
